implemented ga for rectangular forms

--- a/Genetic algorithm sample test.ipynb
+++ b/Genetic algorithm sample test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,9 @@
     "    #print('Probabilities', P)\n",
     "    C = np.cumsum(P)\n",
     "    C = np.insert(C, 0, 0).reshape(P.shape[0]+1,1)\n",
-    "    #print('Cumsum' , C)\n",
+    "    print('Cumsum' , C.size)\n",
     "    R = np.random.random(P.shape)\n",
-    "    #print('Random', R)\n",
+    "    print('Random', R.size)\n",
     "    sorted_population = np.zeros([population.shape[0],4])\n",
     "    for i in range(R.shape[0]):\n",
     "        for j in range(0, C.shape[0]):\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +120,53 @@
      "output_type": "stream",
      "text": [
       "Initial population \n",
-      "  [[ 4 28 18 22]\n",
-      " [15 20 22 18]\n",
-      " [23  3 24 20]\n",
-      " [ 5  2 18 28]\n",
-      " [28  6 24  1]\n",
-      " [10  4 27 15]]\n",
-      "found at  88 [[3. 9. 2. 1.]]\n",
+      "  [[15 21 17  2]\n",
+      " [28  0 10 26]\n",
+      " [ 6  0  9 13]\n",
+      " [21 18 27 23]\n",
+      " [ 2  4 15 14]\n",
+      " [ 9  3 11  8]]\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "found at  19 [[9. 3. 3. 3.]]\n",
       "eval =  [[30.]]\n"
      ]
     }
@@ -146,6 +186,13 @@
     "        print('eval = ', evaluate[np.where(evaluate[:]==30)[0]])\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
