fixed fitness function

--- a/Genetic Sample Acquaintance.ipynb
+++ b/Genetic Sample Acquaintance.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "class rectangle:\n",
     "    def __init__(self, x, y, w, h, theta):\n",
-    "        thresh = 6\n",
+    "        thresh = 8\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        self.w = w\n",
@@ -125,15 +125,10 @@
     "        self.pts_inner = np.array([[x0r,y0r],[x1r,y1r],[x2r,y2r],[x3r,y3r]], np.int32)\n",
     "        \n",
     "        self.S_thresh = cv2.contourArea(self.pts_outer) - cv2.contourArea(self.pts_inner) \n",
-    "\n",
-    "    def find_pxls_thresh(self, image):  \n",
-    "        mask_img = np.zeros(image.shape[:2], np.uint8)\n",
-    "        cv2.fillPoly(mask_img, pts = [self.pts_outer], color=(255,255,255))\n",
-    "        cv2.fillPoly(mask_img, pts = [self.pts_inner], color=(0,0,0))\n",
-    "        masked = cv2.bitwise_and(image, image, mask=mask_img)\n",
-    "        self.num_whites = masked[masked==(255,255,255)].size\n",
-    "        #print(self.num_whites)\n",
-    "        "
+    "        self.num_whites = 0\n",
+    "        \n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -145,15 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "class GA:\n",
-    "    def __init__(self, img_dims):\n",
+    "    def __init__(self, image):\n",
     "        self.population=[]\n",
-    "        self.img_dims = img_dims\n",
+    "        self.image = image\n",
+    "        self.img_dims = image.shape[:2]\n",
     "        self.fitness =[]\n",
+    "        self.num_whites_total = self.image[self.image==(255,255,255)].size\n",
+    "        print(self.num_whites_total)\n",
+    "        \n",
+    "        \n",
     "    def init_popultation(self, size):\n",
     "        #self.population=[]\n",
     "        self.size = size\n",
@@ -164,16 +164,66 @@
     "            rand_h = np.random.randint(10, self.img_dims[1]*0.9,1)\n",
     "            rand_theta = np.random.uniform(0, 2*np.pi)\n",
     "            self.population.append(rectangle(rand_x,rand_y,rand_w,rand_h,rand_theta))\n",
+    "    \n",
+    "    def find_pxls_thresh(self):\n",
+    "        '''\n",
+    "        for i in range(self.size):\n",
+    "            sides = []\n",
+    "            self.whites_per_side = []\n",
+    "            mask_img = np.zeros(self.image.shape[:2], np.uint8)\n",
+    "            for j in range(0,4):\n",
+    "                sides.append(np.concatenate((self.population[i].pts_outer[j-1],self.population[i].pts_outer[j],\\\n",
+    "                self.population[i].pts_inner[j],self.population[i].pts_inner[j-1])).reshape(4,2))\n",
+    "                \n",
+    "                cv2.fillPoly(mask_img, pts = [sides[j]], color=(255,255,255))\n",
+    "                masked = cv2.bitwise_and(self.image, self.image, mask=mask_img)\n",
+    "                #cv2.imshow('sesss', masked)\n",
+    "                #cv2.waitKey()\n",
+    "                #cv2.destroyAllWindows()\n",
+    "                self.whites_per_side.append(masked[masked==(255,255,255)].size) \n",
+    "            self.population[i].num_whites = sum(self.whites_per_side)\n",
+    "            #print(self.whites_per_side)\n",
+    "        '''\n",
+    "        for i in range(self.size):\n",
+    "            mask_img = np.zeros(self.image.shape[:2], np.uint8)\n",
+    "            #print(self.population[i].pts_outer)\n",
+    "            cv2.fillPoly(mask_img, pts = [self.population[i].pts_outer], color=(255,255,255))\n",
+    "            cv2.fillPoly(mask_img, pts = [self.population[i].pts_inner], color=(0,0,0))\n",
+    "            masked = cv2.bitwise_and(self.image, self.image, mask=mask_img)\n",
+    "            #cv2.imshow('sesss', masked)\n",
+    "            #cv2.waitKey()\n",
+    "            #cv2.destroyAllWindows()\n",
+    "            self.population[i].num_whites = masked[masked==(255,255,255)].size\n",
     "            \n",
+    "            #print(self.population[i].num_whites)\n",
+    "        \n",
+    "        \n",
     "    def calc_fitness(self):\n",
     "        self.fitness =[]\n",
+    "        weighted_sides = []\n",
     "        for i in range(self.size):\n",
-    "            # Total pts\n",
-    "            self.fitness.append(self.population[i].num_whites) \n",
-    "            # Pts/Area\n",
-    "            #self.fitness.append(self.population[i].num_whites/(self.population[i].S_thresh+1))\n",
-    "            # Pts/Total Pts\n",
+    "            # Total pts - bad\n",
+    "            #self.fitness.append(self.population[i].num_whites) \n",
     "            \n",
+    "            # Pts/Area - bad\n",
+    "            #self.fitness.append(self.population[i].num_whites/(self.population[i].S_thresh+1))\n",
+    "            \n",
+    "            # Pts/(Total Pts-Pts)\n",
+    "            self.fitness.append( 100*(self.population[i].num_whites/(self.num_whites_total-self.population[i].num_whites+1)))\n",
+    "            \n",
+    "            # Weighted Pts/(Total Pts-Pts)\n",
+    "            # Weight of n-th element is N of pts - average \n",
+    "            # Weight of all 1 /  (1+sum(W*Pts[i]/(Total_Pts-Pts)))\n",
+    "            '''\n",
+    "            average = self.population[i].num_whites/4\n",
+    "            for j in range(4):\n",
+    "                weight = self.whites_per_side[j]-average\n",
+    "                weighted_sides.append(weight*self.whites_per_side[j])\n",
+    "                \n",
+    "            weight_total = abs(1/(sum(weighted_sides)/(self.num_whites_total-self.population[i].num_whites+1)+1))\n",
+    "            #print(weight_total)\n",
+    "            self.fitness.append( weight_total+(self.population[i].num_whites/(self.num_whites_total-self.population[i].num_whites+1)))\n",
+    "            '''\n",
     "        #print(self.fitness)\n",
     "        x = zip(self.fitness,self.population)\n",
     "        xs = sorted(x,reverse = True, key=lambda tup: tup[0])\n",
@@ -250,24 +300,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23763\n",
+      "Found better fintess:  9.587272308047037\n",
+      "Found better fintess:  10.243087771386158\n",
+      "Found better fintess:  12.978986402966624\n",
+      "Found better fintess:  13.075751808146174\n",
+      "Found better fintess:  14.464621164683782\n",
+      "Found better fintess:  15.684938175445428\n",
+      "Found better fintess:  16.228113078352735\n",
+      "Found better fintess:  18.98658121369918\n",
+      "Found better fintess:  19.705823090872457\n",
+      "Found better fintess:  21.26345869265704\n",
+      "Found better fintess:  21.74804037092064\n",
+      "Found better fintess:  24.581913499344694\n",
+      "Best fintess:  24.581913499344694\n"
+     ]
+    }
+   ],
    "source": [
     "#np.random.seed(14)\n",
-    "file = cv2.imread('Test/box5.jpg')\n",
-    "scale_percent = 30 # percent of original size\n",
+    "file = cv2.imread('Test/door.jpg')\n",
+    "scale_percent = 50 # percent of original size\n",
     "width = int(file.shape[1] * scale_percent / 100)\n",
     "height = int(file.shape[0] * scale_percent / 100)\n",
     "dim = (width, height)\n",
     "resized = cv2.resize(file, dim)\n",
     "edges = filter_image(resized)\n",
     "edges_cpy = edges.copy()\n",
-    "population_len = 20\n",
-    "algorithm = GA(resized.shape)\n",
-    "number_steps = 200\n",
+    "population_len =20 \n",
+    "algorithm = GA(edges_cpy)\n",
+    "number_steps =300 \n",
     "#rect = rectangle(200, 200,100,100,np.pi/2)\n",
     "algorithm.init_popultation(population_len )\n",
+    "best_fit = 0\n",
+    "best_model = None\n",
     "for _ in range(number_steps):\n",
     "    edges_cpy = edges.copy()\n",
     "    random.shuffle(algorithm.population)\n",
@@ -275,8 +348,14 @@
     "        cv2.polylines(edges_cpy,[algorithm.population[i].pts],True,(0,255,255))\n",
     "        cv2.polylines(edges_cpy,[algorithm.population[i].pts_outer],True,(0,0,255))\n",
     "        cv2.polylines(edges_cpy,[algorithm.population[i].pts_inner],True,(0,0,255))\n",
-    "        algorithm.population[i].find_pxls_thresh(edges)\n",
+    "    algorithm.find_pxls_thresh()\n",
+    "    #print(algorithm.fitness)\n",
     "    algorithm.calc_fitness()\n",
+    "    if algorithm.fitness[0]>best_fit:\n",
+    "        best_fit = algorithm.fitness[0]\n",
+    "        print('Found better fintess: ',best_fit )\n",
+    "        best_model = algorithm.population[0]\n",
+    "        #print('Found better modЦel: ',best_model.pts )\n",
     "    algorithm.selection()\n",
     "    algorithm.repopulate()\n",
     "    algorithm.mutate_population()\n",
@@ -284,19 +363,48 @@
     "    cv2.imshow('edges', edges_cpy)\n",
     "    if cv2.waitKey(27) & 0xFF == ord('q'):\n",
     "        break\n",
-    "#cv2.destroyAllWindows()\n",
+    "cv2.destroyAllWindows()\n",
     "edges_cpy = edges.copy()\n",
-    "for i in range(population_len):\n",
-    "    algorithm.population[i].find_pxls_thresh(edges)\n",
-    "algorithm.calc_fitness()\n",
-    "cv2.polylines(edges_cpy,[algorithm.population[0].pts],True,(0,255,255))\n",
-    "cv2.polylines(edges_cpy,[algorithm.population[0].pts_outer],True,(0,0,255))\n",
-    "cv2.polylines(edges_cpy,[algorithm.population[0].pts_inner],True,(0,0,255))\n",
+    "\n",
+    "#algorithm.find_pxls_thresh()\n",
+    "#algorithm.calc_fitness()\n",
+    "#print(algorithm.population[0].num_whites)\n",
+    "print('Best fintess: ',best_fit )\n",
+    "#print('Best model: ',best_model.pts )\n",
+    "cv2.polylines(edges_cpy,[best_model.pts],True,(0,255,255))\n",
+    "cv2.polylines(edges_cpy,[best_model.pts_outer],True,(0,0,255))\n",
+    "cv2.polylines(edges_cpy,[best_model.pts_inner],True,(0,0,255))\n",
     "cv2.imshow('edges', edges_cpy)\n",
     "cv2.waitKey()\n",
     "cv2.destroyAllWindows()\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5814\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(algorithm.population[0].num_whites)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algorithm.find_pxls_thresh()"
    ]
   },
   {
