--- a/RANSAC Test.ipynb
+++ b/RANSAC Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1daa8e6d4c0>]"
+       "[<matplotlib.lines.Line2D at 0x14768c3dfd0>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -65,11 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_model(points):\n",
+    "    \n",
     "    k = (points[0][1] - points[1][1])/(points[0][0]-points[1][0]+ sys.float_info.epsilon)\n",
     "    b = points[1][1]-k*points[1][0]\n",
     "    return k, b"
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -123,81 +124,151 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n",
+      "[[  8.50264999 479.62652139]\n",
+      " [  5.63832825 262.97007929]]\n",
       "found better  14 75.63970189482262 -163.51138885155598 at  0  iteration\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
+      "[[  4.25079275 234.41427193]\n",
+      " [  7.20010121 474.49106644]]\n",
+      "[[  8.67806537 537.29383311]\n",
+      " [  4.06178436  61.66563238]]\n",
+      "[[  3.32783809 342.29752468]\n",
+      " [  4.61374537 320.53103298]]\n",
+      "[[  2.06618752 298.82981893]\n",
+      " [  8.51672275 371.28254649]]\n",
+      "[[  7.34685303 141.32121925]\n",
+      " [  3.32255017 181.51562093]]\n",
+      "[[  5.38055558 303.29042133]\n",
+      " [  6.00502102 331.25136147]]\n",
+      "[[  6.63245858 468.83352031]\n",
+      " [  9.42962364 586.19113897]]\n",
+      "[[  4.25079275 234.41427193]\n",
+      " [  5.78913429 322.42960823]]\n",
+      "[[  3.32783809 342.29752468]\n",
+      " [  3.09437058 214.69200051]]\n",
+      "[[  2.42337504 152.49161053]\n",
+      " [  5.43698112 257.12554682]]\n",
+      "[[-3.02284177e-01  4.79492899e+01]\n",
+      " [ 6.00424977e+00  3.50288557e+02]]\n",
       "found better  22 47.94063893141272 62.440986431266595 at  11  iteration\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
+      "[[  8.50264999 479.62652139]\n",
+      " [  4.56085189 297.62380194]]\n",
+      "[[ -0.76186683  76.97372101]\n",
+      " [  2.34506563 252.569787  ]]\n",
+      "[[  9.73551311 577.000428  ]\n",
+      " [  8.02737647 329.64052063]]\n",
+      "[[  2.34506563 252.569787  ]\n",
+      " [  4.25079275 234.41427193]]\n",
+      "[[  3.38466769 123.71307809]\n",
+      " [  4.10411389 221.89094752]]\n",
+      "[[  4.56933993 265.6309804 ]\n",
+      " [  3.02968223  96.01310531]]\n",
+      "[[  4.25079275 234.41427193]\n",
+      " [  4.75355068 264.87980484]]\n",
       "found better  24 60.596821934686936 -23.17025914021019 at  18  iteration\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
+      "[[  5.63832825 262.97007929]\n",
+      " [  4.58966803 208.19088644]]\n",
+      "[[  4.06178436  61.66563238]\n",
+      " [  3.38466769 123.71307809]]\n",
+      "[[-9.36395733e-02  8.03376053e+01]\n",
+      " [ 4.24409364e+00  5.21158723e+02]]\n",
+      "[[  4.58966803 208.19088644]\n",
+      " [  4.24409364 521.1587226 ]]\n",
+      "[[  3.50723536 593.55394145]\n",
+      " [ 10.68633475 583.33543849]]\n",
+      "[[  4.58966803 208.19088644]\n",
+      " [  8.51672275 371.28254649]]\n",
+      "[[-9.36395733e-02  8.03376053e+01]\n",
+      " [ 4.75355068e+00  2.64879805e+02]]\n",
+      "[[ 4.58966803e+00  2.08190886e+02]\n",
+      " [-5.30259694e-02  1.79711011e+01]]\n",
+      "[[  7.34685303 141.32121925]\n",
+      " [  6.25759385 376.63550569]]\n",
+      "[[  2.34506563 252.569787  ]\n",
+      " [  7.17934818 419.4086865 ]]\n",
+      "[[  3.29335618 283.67119365]\n",
+      " [  5.63832825 262.97007929]]\n",
+      "[[  4.06178436  61.66563238]\n",
+      " [  3.6329464  297.945786  ]]\n",
+      "[[  3.29335618 283.67119365]\n",
+      " [  4.18977065 259.57560303]]\n",
+      "[[  5.63832825 262.97007929]\n",
+      " [  4.18977065 259.57560303]]\n",
+      "[[  4.18977065 259.57560303]\n",
+      " [  4.06178436  61.66563238]]\n",
+      "[[  4.56933993 265.6309804 ]\n",
+      " [  2.57967823 109.69854171]]\n",
+      "[[ 5.38055558e+00  3.03290421e+02]\n",
+      " [-2.30802361e-01  4.09427443e+01]]\n",
       "found better  25 46.75297488994499 51.73344131600312 at  35  iteration\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
+      "[[  0.6279497  162.0522315 ]\n",
+      " [ -0.76186683  76.97372101]]\n",
+      "[[  2.42337504 152.49161053]\n",
+      " [ -0.37541699  14.96953841]]\n",
+      "[[  4.06178436  61.66563238]\n",
+      " [  7.20010121 474.49106644]]\n",
+      "[[  7.20010121 474.49106644]\n",
+      " [  3.29335618 283.67119365]]\n",
+      "[[  1.89415985  63.08434159]\n",
+      " [  3.36292973 148.68634656]]\n",
+      "[[  7.20010121 474.49106644]\n",
+      " [  3.32255017 181.51562093]]\n",
+      "[[  2.65628195  49.85427147]\n",
+      " [  3.32783809 342.29752468]]\n",
+      "[[  0.6279497  162.0522315 ]\n",
+      " [  5.63832825 262.97007929]]\n",
+      "[[  9.73551311 577.000428  ]\n",
+      " [  7.62195289 386.59116146]]\n",
+      "[[  4.18977065 259.57560303]\n",
+      " [  2.65628195  49.85427147]]\n",
+      "[[  7.34685303 141.32121925]\n",
+      " [ -0.30228418  47.94928985]]\n",
+      "[[  2.65628195  49.85427147]\n",
+      " [  3.47933584 246.34733411]]\n",
+      "[[  2.57967823 109.69854171]\n",
+      " [  4.61374537 320.53103298]]\n",
+      "[[  8.67806537 537.29383311]\n",
+      " [  2.18290134 136.33517997]]\n",
       "found better  27 61.73187486649571 1.5805875629798152 at  49  iteration\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
+      "[[  4.10411389 221.89094752]\n",
+      " [  4.36869301 292.63218932]]\n",
+      "[[  4.06178436  61.66563238]\n",
+      " [  7.7892512  518.30740074]]\n",
+      "[[  4.75355068 264.87980484]\n",
+      " [  3.32783809 342.29752468]]\n",
+      "[[ -2.00658441  37.97245175]\n",
+      " [  4.75355068 264.87980484]]\n",
+      "[[  3.02968223  96.01310531]\n",
+      " [  6.00424977 350.2885566 ]]\n",
+      "[[-5.30259694e-02  1.79711011e+01]\n",
+      " [ 4.61374537e+00  3.20531033e+02]]\n",
+      "[[  4.56933993 265.6309804 ]\n",
+      " [  6.25759385 376.63550569]]\n",
+      "[[ 3.29335618e+00  2.83671194e+02]\n",
+      " [-5.30259694e-02  1.79711011e+01]]\n",
+      "[[  2.18290134 136.33517997]\n",
+      " [  5.38055558 303.29042133]]\n",
+      "[[ -2.00658441  37.97245175]\n",
+      " [ 10.68633475 583.33543849]]\n",
+      "[[ 10.68633475 583.33543849]\n",
+      " [  3.32783809 342.29752468]]\n",
+      "[[  5.66007764 311.48235835]\n",
+      " [ 10.68633475 583.33543849]]\n",
+      "[[  3.02968223  96.01310531]\n",
+      " [  3.38466769 123.71307809]]\n",
+      "[[-5.30259694e-02  1.79711011e+01]\n",
+      " [ 6.00502102e+00  3.31251361e+02]]\n",
+      "[[  5.78913429 322.42960823]\n",
+      " [  7.62195289 386.59116146]]\n",
+      "[[  8.67806537 537.29383311]\n",
+      " [  2.34506563 252.569787  ]]\n",
+      "[[  4.58966803 208.19088644]\n",
+      " [  9.73551311 577.000428  ]]\n",
+      "[[  3.02968223  96.01310531]\n",
+      " [  3.36292973 148.68634656]]\n",
+      "[[  8.50264999 479.62652139]\n",
+      " [  3.47933584 246.34733411]]\n",
+      "[[ 5.38055558e+00  3.03290421e+02]\n",
+      " [-5.30259694e-02  1.79711011e+01]]\n",
       "Best model: k =  61.73187486649571  b =  1.5805875629798152 close pts:  27\n"
      ]
     },
