hough lines added

--- a/Genetic Sample Acquaintance.ipynb
+++ b/Genetic Sample Acquaintance.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,27 +300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23763\n",
-      "Found better fintess:  9.587272308047037\n",
-      "Found better fintess:  10.243087771386158\n",
-      "Found better fintess:  12.978986402966624\n",
-      "Found better fintess:  13.075751808146174\n",
-      "Found better fintess:  14.464621164683782\n",
-      "Found better fintess:  15.684938175445428\n",
-      "Found better fintess:  16.228113078352735\n",
-      "Found better fintess:  18.98658121369918\n",
-      "Found better fintess:  19.705823090872457\n",
-      "Found better fintess:  21.26345869265704\n",
-      "Found better fintess:  21.74804037092064\n",
-      "Found better fintess:  24.581913499344694\n",
-      "Best fintess:  24.581913499344694\n"
+     "ename": "NameError",
+     "evalue": "name 'filter_image' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-121-de60a81cfaba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mdim\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mresized\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0medges\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfilter_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresized\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0medges_cpy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0medges\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mpopulation_len\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filter_image' is not defined"
      ]
     }
    ],
@@ -383,28 +374,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5814\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(algorithm.population[0].num_whites)"
+    "file = cv2.imread('Test/box1.jpg')\n",
+    "scale_percent = 50 # percent of original size\n",
+    "width = int(file.shape[1] * scale_percent / 100)\n",
+    "height = int(file.shape[0] * scale_percent / 100)\n",
+    "dim = (width, height)\n",
+    "resized = cv2.resize(file, dim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "algorithm.find_pxls_thresh()"
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "img = cv2.imread('Test/box18.jpg')\n",
+    "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY) \n",
+    "blurred = cv2.bilateralFilter(gray,6,75,75)\n",
+    "edges = cv2.Canny(blurred,0,40)\n",
+    "#edges = cv2.cvtColor(edges, cv2.COLOR_GRAY2BGR)\n",
+    "cv2.imshow('edges', edges)\n",
+    "lines = cv2.HoughLines(edges,1,np.pi/180,200)\n",
+    "for l in lines:\n",
+    "    for rho,theta in l:\n",
+    "        a = np.cos(theta)\n",
+    "        b = np.sin(theta)\n",
+    "        x0 = a*rho\n",
+    "        y0 = b*rho\n",
+    "        x1 = int(x0 + 1000*(-b))\n",
+    "        y1 = int(y0 + 1000*(a))\n",
+    "        x2 = int(x0 - 1000*(-b))\n",
+    "        y2 = int(y0 - 1000*(a))\n",
+    "\n",
+    "        cv2.line(img,(x1,y1),(x2,y2),(0,0,255),2)\n",
+    "cv2.imshow('lines', img)\n",
+    "cv2.waitKey()\n",
+    "cv2.destroyAllWindows()\n",
+    "#cv2.imwrite('houghlines3.jpg',img)"
    ]
   },
   {
@@ -412,7 +425,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "file = cv2.imread('Test/door.jpg')\n",
+    "scale_percent = 50 # percent of original size\n",
+    "width = int(file.shape[1] * scale_percent / 100)\n",
+    "height = int(file.shape[0] * scale_percent / 100)\n",
+    "dim = (width, height)\n",
+    "resized = cv2.resize(file, dim)\n",
+    "gray = cv2.cvtColor(resized, cv2.COLOR_BGR2GRAY) \n",
+    "blurred = cv2.bilateralFilter(gray,6,75,75)\n",
+    "edges = cv2.Canny(blurred,0,150)\n",
+    "\n",
+    "\n",
+    "cv2.imshow('edges', edges)\n",
+    "lines = cv2.HoughLinesP(edges,rho = 1,theta = np.pi/180,threshold = 10,minLineLength= 50, maxLineGap=10)\n",
+    "for l in lines:\n",
+    "    for x1,y1,x2,y2 in l:\n",
+    "        cv2.line(resized,(x1,y1),(x2,y2),(0,255,0),2)\n",
+    "print(lines.shape[0])\n",
+    "cv2.imshow('lines', resized)\n",
+    "cv2.waitKey()\n",
+    "cv2.destroyAllWindows()"
+   ]
   },
   {
    "cell_type": "code",
