todo: moving scanning line

--- a/Genetic Sample Acquaintance.ipynb
+++ b/Genetic Sample Acquaintance.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,8 +127,7 @@
     "        self.S_thresh = cv2.contourArea(self.pts_outer) - cv2.contourArea(self.pts_inner) \n",
     "        self.num_whites = 0\n",
     "        \n",
-    "        \n",
-    "    "
+    "   "
    ]
   },
   {
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +163,18 @@
     "            rand_h = np.random.randint(10, self.img_dims[1]*0.9,1)\n",
     "            rand_theta = np.random.uniform(0, 2*np.pi)\n",
     "            self.population.append(rectangle(rand_x,rand_y,rand_w,rand_h,rand_theta))\n",
+    "            \n",
+    "    def calc_axis_line(self, point_1, point_2):\n",
+    "        k = (point_1[1] - point_2[1])/(point_1[0]-point_2[0]+ sys.float_info.epsilon)\n",
+    "        b = point_2[1]-k*point_2[0]\n",
+    "        return k, b\n",
+    "    \n",
+    "    \n",
+    "        \n",
     "    \n",
     "    def find_pxls_thresh(self):\n",
     "        '''\n",
+    "        # Pixels in side's sectors\n",
     "        for i in range(self.size):\n",
     "            sides = []\n",
     "            self.whites_per_side = []\n",
@@ -183,6 +191,7 @@
     "                self.whites_per_side.append(masked[masked==(255,255,255)].size) \n",
     "            self.population[i].num_whites = sum(self.whites_per_side)\n",
     "            #print(self.whites_per_side)\n",
+    "            \n",
     "        '''\n",
     "        for i in range(self.size):\n",
     "            mask_img = np.zeros(self.image.shape[:2], np.uint8)\n",
@@ -300,25 +309,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'filter_image' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-121-de60a81cfaba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mdim\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mresized\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0medges\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfilter_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresized\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0medges_cpy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0medges\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mpopulation_len\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'filter_image' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10773\n",
+      "Found better fintess:  13.172268907563026\n",
+      "Found better fintess:  18.47371893556191\n",
+      "Found better fintess:  19.85760373790188\n",
+      "Found better fintess:  20.74414434607195\n",
+      "Found better fintess:  23.18774296821404\n",
+      "Found better fintess:  23.82484771865303\n",
+      "Found better fintess:  24.253257986391418\n",
+      "Found better fintess:  26.08543007606788\n",
+      "Found better fintess:  35.761088709677416\n",
+      "Best fintess:  35.761088709677416\n"
      ]
     }
    ],
    "source": [
     "#np.random.seed(14)\n",
-    "file = cv2.imread('Test/door.jpg')\n",
-    "scale_percent = 50 # percent of original size\n",
+    "file = cv2.imread('Test/door6.jpg')\n",
+    "scale_percent = 100 # percent of original size\n",
     "width = int(file.shape[1] * scale_percent / 100)\n",
     "height = int(file.shape[0] * scale_percent / 100)\n",
     "dim = (width, height)\n",
@@ -327,7 +342,7 @@
     "edges_cpy = edges.copy()\n",
     "population_len =20 \n",
     "algorithm = GA(edges_cpy)\n",
-    "number_steps =300 \n",
+    "number_steps =300\n",
     "#rect = rectangle(200, 200,100,100,np.pi/2)\n",
     "algorithm.init_popultation(population_len )\n",
     "best_fit = 0\n",
@@ -374,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,9 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -437,11 +460,11 @@
     "resized = cv2.resize(file, dim)\n",
     "gray = cv2.cvtColor(resized, cv2.COLOR_BGR2GRAY) \n",
     "blurred = cv2.bilateralFilter(gray,6,75,75)\n",
-    "edges = cv2.Canny(blurred,0,150)\n",
+    "edges = cv2.Canny(blurred,0,110)\n",
     "\n",
     "\n",
     "cv2.imshow('edges', edges)\n",
-    "lines = cv2.HoughLinesP(edges,rho = 1,theta = np.pi/180,threshold = 10,minLineLength= 50, maxLineGap=10)\n",
+    "lines = cv2.HoughLinesP(edges,rho = 1,theta = np.pi/180,threshold = 30,minLineLength=100, maxLineGap=50)\n",
     "for l in lines:\n",
     "    for x1,y1,x2,y2 in l:\n",
     "        cv2.line(resized,(x1,y1),(x2,y2),(0,255,0),2)\n",
